--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
     <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
     <script src="bower_components/ngCordova/dist/ng-cordova.js"></script>
     <!-- endbower -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
